travail/2e_semestre/bachelor_Sem/presentation/outil00/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> CALC calc
Rule 2     start -> CHECK check
Rule 3     start -> SPLIT split
Rule 4     start -> ISNUMBER isnumber
Rule 5     start -> ISLIST list
Rule 6     start -> TOKEN token
Rule 7     check -> check1
Rule 8     check -> check2
Rule 9     check1 -> c_premises MINUS MINUS c_conclusion
Rule 10    check2 -> MINUS MINUS c_conclusion
Rule 11    c_premises -> c_statement COMA c_premises
Rule 12    c_premises -> c_statement
Rule 13    c_statement -> c_exp c_right_statement
Rule 14    c_right_statement -> MINUS SUP VAR
Rule 15    c_right_statement -> comparator c_term_var
Rule 16    c_right_statement -> IN NAME
Rule 17    c_term_var -> c_term
Rule 18    c_term_var -> VAR
Rule 19    c_conclusion -> c_exp EQUAL c_exp
Rule 20    c_exp -> NAME OP c_exp CP
Rule 21    c_exp -> c_term
Rule 22    c_exp -> VAR
Rule 23    c_exp -> c_exp COMA c_exp
Rule 24    c_term -> NUM
Rule 25    c_term -> c_list
Rule 26    c_list -> OSB c_morelist CSB
Rule 27    c_morelist -> c_term_var COMA c_morelist
Rule 28    c_morelist -> c_term_var
Rule 29    c_list -> OSB CSB
Rule 30    c_list -> INF c_morelist SUP
Rule 31    calc -> exp
Rule 32    calc -> condition
Rule 33    condition -> exp comparator exp
Rule 34    comparator -> EQUAL EQUAL
Rule 35    comparator -> SUP
Rule 36    comparator -> SUP EQUAL
Rule 37    comparator -> INF
Rule 38    comparator -> INF EQUAL
Rule 39    exp -> NAME OP exp CP
Rule 40    exp -> exp more
Rule 41    exp -> NUM
Rule 42    exp -> list
Rule 43    list -> OSB morelist CSB
Rule 44    morelist -> NUM COMA morelist
Rule 45    morelist -> NUM SEMICOLON morelist
Rule 46    morelist -> NUM
Rule 47    list -> OSB CSB
Rule 48    list -> INF morelist SUP
Rule 49    more -> COMA exp more
Rule 50    more -> SEMICOLON exp more
Rule 51    more -> COMA exp
Rule 52    more -> SEMICOLON exp
Rule 53    split -> s_exp
Rule 54    s_exp -> NAME OP s_subexp CP
Rule 55    s_exp -> s_term
Rule 56    s_exp -> VAR
Rule 57    s_exp -> s_exp SEMICOLON s_exp
Rule 58    s_exp -> s_exp COMA s_exp
Rule 59    s_term -> NUM
Rule 60    s_term -> c_list
Rule 61    s_subexp -> NAME OP s_subexp CP
Rule 62    s_subexp -> s_term
Rule 63    s_subexp -> VAR
Rule 64    s_subexp -> s_subexp SEMICOLON s_subexp
Rule 65    token -> t_statement
Rule 66    token -> t_exp
Rule 67    token -> t_conclusion
Rule 68    t_statement -> t_exp t_right_statement
Rule 69    t_right_statement -> MINUS SUP VAR
Rule 70    t_right_statement -> IN NAME
Rule 71    t_right_statement -> comparator c_term_var
Rule 72    t_exp -> NAME OP t_exp CP
Rule 73    t_exp -> t_term
Rule 74    t_exp -> VAR
Rule 75    t_exp -> t_exp COMA t_exp
Rule 76    t_exp -> t_exp SEMICOLON t_exp
Rule 77    t_term -> NUM
Rule 78    t_term -> c_list
Rule 79    t_conclusion -> t_exp EQUAL t_exp
Rule 80    isnumber -> NUM

Terminals, with rules where they appear

CALC                 : 1
CHECK                : 2
COMA                 : 11 23 27 44 49 51 58 75
CP                   : 20 39 54 61 72
CSB                  : 26 29 43 47
EQUAL                : 19 34 34 36 38 79
IN                   : 16 70
INF                  : 30 37 38 48
ISLIST               : 5
ISNUMBER             : 4
MINUS                : 9 9 10 10 14 69
NAME                 : 16 20 39 54 61 70 72
NUM                  : 24 41 44 45 46 59 77 80
OP                   : 20 39 54 61 72
OSB                  : 26 29 43 47
SEMICOLON            : 45 50 52 57 64 76
SPLIT                : 3
SUP                  : 14 30 35 36 48 69
TOKEN                : 6
VAR                  : 14 18 22 56 63 69 74
error                : 

Nonterminals, with rules where they appear

c_conclusion         : 9 10
c_exp                : 13 19 19 20 23 23
c_list               : 25 60 78
c_morelist           : 26 27 30
c_premises           : 9 11
c_right_statement    : 13
c_statement          : 11 12
c_term               : 17 21
c_term_var           : 15 27 28 71
calc                 : 1
check                : 2
check1               : 7
check2               : 8
comparator           : 15 33 71
condition            : 32
exp                  : 31 33 33 39 40 49 50 51 52
isnumber             : 4
list                 : 5 42
more                 : 40 49 50
morelist             : 43 44 45 48
s_exp                : 53 57 57 58 58
s_subexp             : 54 61 64 64
s_term               : 55 62
split                : 3
start                : 0
t_conclusion         : 67
t_exp                : 66 68 72 75 75 76 76 79 79
t_right_statement    : 68
t_statement          : 65
t_term               : 73
token                : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . CALC calc
    (2) start -> . CHECK check
    (3) start -> . SPLIT split
    (4) start -> . ISNUMBER isnumber
    (5) start -> . ISLIST list
    (6) start -> . TOKEN token

    CALC            shift and go to state 2
    CHECK           shift and go to state 3
    SPLIT           shift and go to state 4
    ISNUMBER        shift and go to state 5
    ISLIST          shift and go to state 6
    TOKEN           shift and go to state 7

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> CALC . calc
    (31) calc -> . exp
    (32) calc -> . condition
    (39) exp -> . NAME OP exp CP
    (40) exp -> . exp more
    (41) exp -> . NUM
    (42) exp -> . list
    (33) condition -> . exp comparator exp
    (43) list -> . OSB morelist CSB
    (47) list -> . OSB CSB
    (48) list -> . INF morelist SUP

    NAME            shift and go to state 11
    NUM             shift and go to state 12
    OSB             shift and go to state 14
    INF             shift and go to state 15

    calc                           shift and go to state 8
    exp                            shift and go to state 9
    condition                      shift and go to state 10
    list                           shift and go to state 13

state 3

    (2) start -> CHECK . check
    (7) check -> . check1
    (8) check -> . check2
    (9) check1 -> . c_premises MINUS MINUS c_conclusion
    (10) check2 -> . MINUS MINUS c_conclusion
    (11) c_premises -> . c_statement COMA c_premises
    (12) c_premises -> . c_statement
    (13) c_statement -> . c_exp c_right_statement
    (20) c_exp -> . NAME OP c_exp CP
    (21) c_exp -> . c_term
    (22) c_exp -> . VAR
    (23) c_exp -> . c_exp COMA c_exp
    (24) c_term -> . NUM
    (25) c_term -> . c_list
    (26) c_list -> . OSB c_morelist CSB
    (29) c_list -> . OSB CSB
    (30) c_list -> . INF c_morelist SUP

    MINUS           shift and go to state 20
    NAME            shift and go to state 23
    VAR             shift and go to state 25
    NUM             shift and go to state 26
    OSB             shift and go to state 28
    INF             shift and go to state 29

    check                          shift and go to state 16
    check1                         shift and go to state 17
    check2                         shift and go to state 18
    c_premises                     shift and go to state 19
    c_statement                    shift and go to state 21
    c_exp                          shift and go to state 22
    c_term                         shift and go to state 24
    c_list                         shift and go to state 27

state 4

    (3) start -> SPLIT . split
    (53) split -> . s_exp
    (54) s_exp -> . NAME OP s_subexp CP
    (55) s_exp -> . s_term
    (56) s_exp -> . VAR
    (57) s_exp -> . s_exp SEMICOLON s_exp
    (58) s_exp -> . s_exp COMA s_exp
    (59) s_term -> . NUM
    (60) s_term -> . c_list
    (26) c_list -> . OSB c_morelist CSB
    (29) c_list -> . OSB CSB
    (30) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 32
    VAR             shift and go to state 34
    NUM             shift and go to state 35
    OSB             shift and go to state 28
    INF             shift and go to state 29

    split                          shift and go to state 30
    s_exp                          shift and go to state 31
    s_term                         shift and go to state 33
    c_list                         shift and go to state 36

state 5

    (4) start -> ISNUMBER . isnumber
    (80) isnumber -> . NUM

    NUM             shift and go to state 38

    isnumber                       shift and go to state 37

state 6

    (5) start -> ISLIST . list
    (43) list -> . OSB morelist CSB
    (47) list -> . OSB CSB
    (48) list -> . INF morelist SUP

    OSB             shift and go to state 14
    INF             shift and go to state 15

    list                           shift and go to state 39

state 7

    (6) start -> TOKEN . token
    (65) token -> . t_statement
    (66) token -> . t_exp
    (67) token -> . t_conclusion
    (68) t_statement -> . t_exp t_right_statement
    (72) t_exp -> . NAME OP t_exp CP
    (73) t_exp -> . t_term
    (74) t_exp -> . VAR
    (75) t_exp -> . t_exp COMA t_exp
    (76) t_exp -> . t_exp SEMICOLON t_exp
    (79) t_conclusion -> . t_exp EQUAL t_exp
    (77) t_term -> . NUM
    (78) t_term -> . c_list
    (26) c_list -> . OSB c_morelist CSB
    (29) c_list -> . OSB CSB
    (30) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 44
    VAR             shift and go to state 46
    NUM             shift and go to state 47
    OSB             shift and go to state 28
    INF             shift and go to state 29

    token                          shift and go to state 40
    t_statement                    shift and go to state 41
    t_exp                          shift and go to state 42
    t_conclusion                   shift and go to state 43
    t_term                         shift and go to state 45
    c_list                         shift and go to state 48

state 8

    (1) start -> CALC calc .

    $end            reduce using rule 1 (start -> CALC calc .)


state 9

    (31) calc -> exp .
    (40) exp -> exp . more
    (33) condition -> exp . comparator exp
    (49) more -> . COMA exp more
    (50) more -> . SEMICOLON exp more
    (51) more -> . COMA exp
    (52) more -> . SEMICOLON exp
    (34) comparator -> . EQUAL EQUAL
    (35) comparator -> . SUP
    (36) comparator -> . SUP EQUAL
    (37) comparator -> . INF
    (38) comparator -> . INF EQUAL

    $end            reduce using rule 31 (calc -> exp .)
    COMA            shift and go to state 51
    SEMICOLON       shift and go to state 52
    EQUAL           shift and go to state 53
    SUP             shift and go to state 54
    INF             shift and go to state 55

    more                           shift and go to state 49
    comparator                     shift and go to state 50

state 10

    (32) calc -> condition .

    $end            reduce using rule 32 (calc -> condition .)


state 11

    (39) exp -> NAME . OP exp CP

    OP              shift and go to state 56


state 12

    (41) exp -> NUM .

    COMA            reduce using rule 41 (exp -> NUM .)
    SEMICOLON       reduce using rule 41 (exp -> NUM .)
    EQUAL           reduce using rule 41 (exp -> NUM .)
    SUP             reduce using rule 41 (exp -> NUM .)
    INF             reduce using rule 41 (exp -> NUM .)
    $end            reduce using rule 41 (exp -> NUM .)
    CP              reduce using rule 41 (exp -> NUM .)


state 13

    (42) exp -> list .

    COMA            reduce using rule 42 (exp -> list .)
    SEMICOLON       reduce using rule 42 (exp -> list .)
    EQUAL           reduce using rule 42 (exp -> list .)
    SUP             reduce using rule 42 (exp -> list .)
    INF             reduce using rule 42 (exp -> list .)
    $end            reduce using rule 42 (exp -> list .)
    CP              reduce using rule 42 (exp -> list .)


state 14

    (43) list -> OSB . morelist CSB
    (47) list -> OSB . CSB
    (44) morelist -> . NUM COMA morelist
    (45) morelist -> . NUM SEMICOLON morelist
    (46) morelist -> . NUM

    CSB             shift and go to state 58
    NUM             shift and go to state 59

    morelist                       shift and go to state 57

state 15

    (48) list -> INF . morelist SUP
    (44) morelist -> . NUM COMA morelist
    (45) morelist -> . NUM SEMICOLON morelist
    (46) morelist -> . NUM

    NUM             shift and go to state 59

    morelist                       shift and go to state 60

state 16

    (2) start -> CHECK check .

    $end            reduce using rule 2 (start -> CHECK check .)


state 17

    (7) check -> check1 .

    $end            reduce using rule 7 (check -> check1 .)


state 18

    (8) check -> check2 .

    $end            reduce using rule 8 (check -> check2 .)


state 19

    (9) check1 -> c_premises . MINUS MINUS c_conclusion

    MINUS           shift and go to state 61


state 20

    (10) check2 -> MINUS . MINUS c_conclusion

    MINUS           shift and go to state 62


state 21

    (11) c_premises -> c_statement . COMA c_premises
    (12) c_premises -> c_statement .

    COMA            shift and go to state 63
    MINUS           reduce using rule 12 (c_premises -> c_statement .)


state 22

    (13) c_statement -> c_exp . c_right_statement
    (23) c_exp -> c_exp . COMA c_exp
    (14) c_right_statement -> . MINUS SUP VAR
    (15) c_right_statement -> . comparator c_term_var
    (16) c_right_statement -> . IN NAME
    (34) comparator -> . EQUAL EQUAL
    (35) comparator -> . SUP
    (36) comparator -> . SUP EQUAL
    (37) comparator -> . INF
    (38) comparator -> . INF EQUAL

    COMA            shift and go to state 65
    MINUS           shift and go to state 66
    IN              shift and go to state 68
    EQUAL           shift and go to state 53
    SUP             shift and go to state 54
    INF             shift and go to state 55

    c_right_statement              shift and go to state 64
    comparator                     shift and go to state 67

state 23

    (20) c_exp -> NAME . OP c_exp CP

    OP              shift and go to state 69


state 24

    (21) c_exp -> c_term .

    COMA            reduce using rule 21 (c_exp -> c_term .)
    MINUS           reduce using rule 21 (c_exp -> c_term .)
    IN              reduce using rule 21 (c_exp -> c_term .)
    EQUAL           reduce using rule 21 (c_exp -> c_term .)
    SUP             reduce using rule 21 (c_exp -> c_term .)
    INF             reduce using rule 21 (c_exp -> c_term .)
    CP              reduce using rule 21 (c_exp -> c_term .)
    $end            reduce using rule 21 (c_exp -> c_term .)


state 25

    (22) c_exp -> VAR .

    COMA            reduce using rule 22 (c_exp -> VAR .)
    MINUS           reduce using rule 22 (c_exp -> VAR .)
    IN              reduce using rule 22 (c_exp -> VAR .)
    EQUAL           reduce using rule 22 (c_exp -> VAR .)
    SUP             reduce using rule 22 (c_exp -> VAR .)
    INF             reduce using rule 22 (c_exp -> VAR .)
    CP              reduce using rule 22 (c_exp -> VAR .)
    $end            reduce using rule 22 (c_exp -> VAR .)


state 26

    (24) c_term -> NUM .

    COMA            reduce using rule 24 (c_term -> NUM .)
    MINUS           reduce using rule 24 (c_term -> NUM .)
    IN              reduce using rule 24 (c_term -> NUM .)
    EQUAL           reduce using rule 24 (c_term -> NUM .)
    SUP             reduce using rule 24 (c_term -> NUM .)
    INF             reduce using rule 24 (c_term -> NUM .)
    CSB             reduce using rule 24 (c_term -> NUM .)
    CP              reduce using rule 24 (c_term -> NUM .)
    $end            reduce using rule 24 (c_term -> NUM .)


state 27

    (25) c_term -> c_list .

    COMA            reduce using rule 25 (c_term -> c_list .)
    MINUS           reduce using rule 25 (c_term -> c_list .)
    IN              reduce using rule 25 (c_term -> c_list .)
    EQUAL           reduce using rule 25 (c_term -> c_list .)
    SUP             reduce using rule 25 (c_term -> c_list .)
    INF             reduce using rule 25 (c_term -> c_list .)
    CSB             reduce using rule 25 (c_term -> c_list .)
    CP              reduce using rule 25 (c_term -> c_list .)
    $end            reduce using rule 25 (c_term -> c_list .)


state 28

    (26) c_list -> OSB . c_morelist CSB
    (29) c_list -> OSB . CSB
    (27) c_morelist -> . c_term_var COMA c_morelist
    (28) c_morelist -> . c_term_var
    (17) c_term_var -> . c_term
    (18) c_term_var -> . VAR
    (24) c_term -> . NUM
    (25) c_term -> . c_list
    (26) c_list -> . OSB c_morelist CSB
    (29) c_list -> . OSB CSB
    (30) c_list -> . INF c_morelist SUP

    CSB             shift and go to state 71
    VAR             shift and go to state 74
    NUM             shift and go to state 26
    OSB             shift and go to state 28
    INF             shift and go to state 29

    c_morelist                     shift and go to state 70
    c_term_var                     shift and go to state 72
    c_term                         shift and go to state 73
    c_list                         shift and go to state 27

state 29

    (30) c_list -> INF . c_morelist SUP
    (27) c_morelist -> . c_term_var COMA c_morelist
    (28) c_morelist -> . c_term_var
    (17) c_term_var -> . c_term
    (18) c_term_var -> . VAR
    (24) c_term -> . NUM
    (25) c_term -> . c_list
    (26) c_list -> . OSB c_morelist CSB
    (29) c_list -> . OSB CSB
    (30) c_list -> . INF c_morelist SUP

    VAR             shift and go to state 74
    NUM             shift and go to state 26
    OSB             shift and go to state 28
    INF             shift and go to state 29

    c_morelist                     shift and go to state 75
    c_term_var                     shift and go to state 72
    c_term                         shift and go to state 73
    c_list                         shift and go to state 27

state 30

    (3) start -> SPLIT split .

    $end            reduce using rule 3 (start -> SPLIT split .)


state 31

    (53) split -> s_exp .
    (57) s_exp -> s_exp . SEMICOLON s_exp
    (58) s_exp -> s_exp . COMA s_exp

    $end            reduce using rule 53 (split -> s_exp .)
    SEMICOLON       shift and go to state 76
    COMA            shift and go to state 77


state 32

    (54) s_exp -> NAME . OP s_subexp CP

    OP              shift and go to state 78


state 33

    (55) s_exp -> s_term .

    SEMICOLON       reduce using rule 55 (s_exp -> s_term .)
    COMA            reduce using rule 55 (s_exp -> s_term .)
    $end            reduce using rule 55 (s_exp -> s_term .)


state 34

    (56) s_exp -> VAR .

    SEMICOLON       reduce using rule 56 (s_exp -> VAR .)
    COMA            reduce using rule 56 (s_exp -> VAR .)
    $end            reduce using rule 56 (s_exp -> VAR .)


state 35

    (59) s_term -> NUM .

    SEMICOLON       reduce using rule 59 (s_term -> NUM .)
    COMA            reduce using rule 59 (s_term -> NUM .)
    $end            reduce using rule 59 (s_term -> NUM .)
    CP              reduce using rule 59 (s_term -> NUM .)


state 36

    (60) s_term -> c_list .

    SEMICOLON       reduce using rule 60 (s_term -> c_list .)
    COMA            reduce using rule 60 (s_term -> c_list .)
    $end            reduce using rule 60 (s_term -> c_list .)
    CP              reduce using rule 60 (s_term -> c_list .)


state 37

    (4) start -> ISNUMBER isnumber .

    $end            reduce using rule 4 (start -> ISNUMBER isnumber .)


state 38

    (80) isnumber -> NUM .

    $end            reduce using rule 80 (isnumber -> NUM .)


state 39

    (5) start -> ISLIST list .

    $end            reduce using rule 5 (start -> ISLIST list .)


state 40

    (6) start -> TOKEN token .

    $end            reduce using rule 6 (start -> TOKEN token .)


state 41

    (65) token -> t_statement .

    $end            reduce using rule 65 (token -> t_statement .)


state 42

    (66) token -> t_exp .
    (68) t_statement -> t_exp . t_right_statement
    (75) t_exp -> t_exp . COMA t_exp
    (76) t_exp -> t_exp . SEMICOLON t_exp
    (79) t_conclusion -> t_exp . EQUAL t_exp
    (69) t_right_statement -> . MINUS SUP VAR
    (70) t_right_statement -> . IN NAME
    (71) t_right_statement -> . comparator c_term_var
    (34) comparator -> . EQUAL EQUAL
    (35) comparator -> . SUP
    (36) comparator -> . SUP EQUAL
    (37) comparator -> . INF
    (38) comparator -> . INF EQUAL

    $end            reduce using rule 66 (token -> t_exp .)
    COMA            shift and go to state 80
    SEMICOLON       shift and go to state 81
    EQUAL           shift and go to state 82
    MINUS           shift and go to state 83
    IN              shift and go to state 84
    SUP             shift and go to state 54
    INF             shift and go to state 55

    t_right_statement              shift and go to state 79
    comparator                     shift and go to state 85

state 43

    (67) token -> t_conclusion .

    $end            reduce using rule 67 (token -> t_conclusion .)


state 44

    (72) t_exp -> NAME . OP t_exp CP

    OP              shift and go to state 86


state 45

    (73) t_exp -> t_term .

    COMA            reduce using rule 73 (t_exp -> t_term .)
    SEMICOLON       reduce using rule 73 (t_exp -> t_term .)
    EQUAL           reduce using rule 73 (t_exp -> t_term .)
    MINUS           reduce using rule 73 (t_exp -> t_term .)
    IN              reduce using rule 73 (t_exp -> t_term .)
    SUP             reduce using rule 73 (t_exp -> t_term .)
    INF             reduce using rule 73 (t_exp -> t_term .)
    $end            reduce using rule 73 (t_exp -> t_term .)
    CP              reduce using rule 73 (t_exp -> t_term .)


state 46

    (74) t_exp -> VAR .

    COMA            reduce using rule 74 (t_exp -> VAR .)
    SEMICOLON       reduce using rule 74 (t_exp -> VAR .)
    EQUAL           reduce using rule 74 (t_exp -> VAR .)
    MINUS           reduce using rule 74 (t_exp -> VAR .)
    IN              reduce using rule 74 (t_exp -> VAR .)
    SUP             reduce using rule 74 (t_exp -> VAR .)
    INF             reduce using rule 74 (t_exp -> VAR .)
    $end            reduce using rule 74 (t_exp -> VAR .)
    CP              reduce using rule 74 (t_exp -> VAR .)


state 47

    (77) t_term -> NUM .

    COMA            reduce using rule 77 (t_term -> NUM .)
    SEMICOLON       reduce using rule 77 (t_term -> NUM .)
    EQUAL           reduce using rule 77 (t_term -> NUM .)
    MINUS           reduce using rule 77 (t_term -> NUM .)
    IN              reduce using rule 77 (t_term -> NUM .)
    SUP             reduce using rule 77 (t_term -> NUM .)
    INF             reduce using rule 77 (t_term -> NUM .)
    $end            reduce using rule 77 (t_term -> NUM .)
    CP              reduce using rule 77 (t_term -> NUM .)


state 48

    (78) t_term -> c_list .
